--- a/apps/spark/pom.xml
+++ b/apps/spark/pom.xml
@@ -3,8 +3,8 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>spark-example</groupId>
-  <artifactId>spark-example</artifactId>
+  <groupId>spark-service</groupId>
+  <artifactId>spark-service</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <dependencies>
@@ -14,6 +14,7 @@
       <version>2.0.0</version>
     </dependency>
   </dependencies>
+
   <build>
     <plugins>
       <plugin>
