--- a/apps/spark/Dockerfile
+++ b/apps/spark/Dockerfile
@@ -1,3 +1,3 @@
 FROM openjdk:alpine
-COPY target/spark-service-jar-with-dependencies.jar /opt/spark-service/
+COPY target/spark-service-jar-with-dependencies.jar config/spark-service.properties /opt/spark-service/
 ENTRYPOINT ["java", "-jar", "/opt/spark-service/spark-service-jar-with-dependencies.jar"]
