--- a/apps/spark/pom.xml
+++ b/apps/spark/pom.xml
@@ -11,8 +11,13 @@
     <dependency>
       <groupId>com.sparkjava</groupId>
       <artifactId>spark-core</artifactId>
-      <version>2.0.0</version>
-    </dependency>
+      <version>2.7.2</version>
+     </dependency>
+     <dependency>
+       <groupId>org.slf4j</groupId>
+       <artifactId>slf4j-simple</artifactId>
+     <version>1.7.25</version>
+</dependency>
   </dependencies>
 
   <build>
