--- a/build
+++ b/build
@@ -3,4 +3,11 @@
 image=${1}
 tag=${2:-${image}}
 
-docker build --tag ${tag} apps/${image}
+[ -d apps/${image} ] || {
+  echo "${image}: Service does not exist"
+  exit 1;
+}
+
+pushd apps/${image}
+make clean build && docker build --tag ${tag} .
+popd
